fixed flicker on sound select

--- a/src/index.css
+++ b/src/index.css
@@ -92,10 +92,10 @@ body {
   padding: 0.25rem;
 }
 
-#top {
+#middle {
   width: 100%;
   height: 100%;
-  min-height: 20vh;
+  min-height: 20%;
   max-height: 30vh;
   display: flex;
 }
@@ -108,7 +108,7 @@ body {
   gap: 0.1rem;
 }
 
-#middle {
+#top {
   flex-shrink: 0;
   width: 100%;
   height: 100vw;
@@ -132,7 +132,6 @@ body {
 #bottom {
   width: 100%;
   height: 100%;
-  min-height: 10vh;
   max-height: 15vh;
   padding: 0.5rem 0;
   scroll-snap-type: x mandatory;
